--- a/dist.ini
+++ b/dist.ini
@@ -14,8 +14,6 @@ Exporter=0
 Getopt::Long::Descriptive::Dump=0
 Getopt::Long::Util=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used "spec"
-Complete=0.18
-;!lint_prereqs assume-used "spec"
-Rinci=1.1.70
+[Prereqs / DevelopSuggests]
+_SPEC::Complete=0.18
+_SPEC::Rinci=1.1.70
