[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,8 @@ Exporter=0
 Getopt::Long::Descriptive::Dump=0
 Getopt::Long::Util=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Complete=0.18
-_SPEC::Rinci=1.1.70
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Complete=0.18
+Rinci=1.1.70
